Fix anchor links

--- a/app/views/docs/email-delivery.phtml
+++ b/app/views/docs/email-delivery.phtml
@@ -4,7 +4,7 @@
 
 <p>In this document, you will learn how to connect a 3rd party SMTP provider like MailGun or SendGrid with Appwrite to help you get better email deliverability.</p>
 
-<h2><a href="#updateEnvFile" id="updateEnvFile">Update Your .env File</a></h2>
+<h2><a href="/docs/email-delivery#updateEnvFile" id="updateEnvFile">Update Your .env File</a></h2>
 
 <p>At this stage, we assume that you have already installed Appwrite. Else, you can follow our <a href="/docs/installation">Getting Started Guide</a> for the installation. Appwrite offers multiple environment variables to customize your server setup to your needs. To configure Appwrite to use your own SMTP server, you need to set the following environment variables in the hidden .env file that comes with your Appwrite installation.</p>
 
@@ -28,7 +28,7 @@ _APP_SMTP_USERNAME=YOUR-SMTP-USERNAME
 _APP_SMTP_PASSWORD=YOUR-SMTP-PASSWORD</code></pre>
 </div>
 
-<h2><a href="#restartServer" id="restartServer">Restart Your Appwrite Server</a></h2>
+<h2><a href="/docs/email-delivery#restartServer" id="restartServer">Restart Your Appwrite Server</a></h2>
 
 <p>Once you've updated your .env file, you need to restart your Appwrite stack using the following command from your terminal:</p>
 
@@ -36,7 +36,7 @@ _APP_SMTP_PASSWORD=YOUR-SMTP-PASSWORD</code></pre>
     <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose up -d</code></pre>
 </div>
 
-<h2><a href="#debugging" id="debugging">Debugging</a></h2>
+<h2><a href="/docs/email-delivery#debugging" id="debugging">Debugging</a></h2>
 
 <p>If you are unable to send emails, there is most likely an issue with your integration. The first place to look for possible errors is the <b>Appwrite Emails Worker</b>. You can access the logs of this container using: 
 
