--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -82,7 +82,7 @@
     </tbody>
 </table>
 
-<h2><a href="#errorMessages" id="errorMessages">Error Messages</a></h2>
+<h2><a href="/docs/error-codes#errorMessages" id="errorMessages">Error Messages</a></h2>
 
 <p>When the Appwrite APIs return error messages, it does so in JSON format. For example, an error might look like this:</p>
 
