--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -16,7 +16,7 @@
     <p>Using the Appwirte permissions mechanism, you can share resources between users, teams, and members with different roles.</p>
 </div>
 
-<h2 id="default-values"><a href="#default-values">Default Values</a></h2>
+<h2 id="default-values"><a href="/docs/permissions#default-values">Default Values</a></h2>
 
 <p>When not providing a resource with read or write permissions, the default value will be empty. When a read or write permissions is missing, no one will be granted access control to the resource.</p>
 
@@ -27,13 +27,13 @@
     <p>If you have rules where you allow for wild cards or role:guest in a collection, you can create an Anonymous Session before you make the API call.</p>
 </div>
 
-<h2 id="server-integration"><a href="#server-integration">Server Integration</a></h2>
+<h2 id="server-integration"><a href="/docs/permissions#server-integration">Server Integration</a></h2>
 
 <p>A server or <a href="/docs/admin" target="_blank">admin integration</a> can be used for increased flexibility. When using a server integration in combination with the proper <a href="/docs/keys#scopes" target="_blank">API scopes</a>, you can have both read and write access to any of your project resources regardless of their permissions.</p>
 
 <p>Using the server integration flexibility, you can change resource permissions, share resources between different users and teams, or edit and delete them without any limitations.</p>
 
-<h2 id="types"><a href="#types">Permission Types</a></h2>
+<h2 id="types"><a href="/docs/permissions#types">Permission Types</a></h2>
 
 <table class="full text-size-small">
     <thead>
@@ -91,7 +91,7 @@
     </tbody>
 </table>
 
-<h2 id="examples"><a href="#examples">Examples</a></h2>
+<h2 id="examples"><a href="/docs/permissions#examples">Examples</a></h2>
 
 <p>The examples below will show you how you can use the different Appwrite permissions to manage access control to your project resources.</p>
 
