--- a/app/views/docs/rate-limits.phtml
+++ b/app/views/docs/rate-limits.phtml
@@ -59,7 +59,7 @@ X-RateLimit-Reset: 1377013266
 </code></pre>
 </div>
 
-<h2><a href="#abuse" id="abuse">Service Abuse</a></h2>
+<h2><a href="/docs/rate-limits#abuse" id="abuse">Service Abuse</a></h2>
 
 <p>To protect the quality of service from Appwrite, additional rate limits may apply to some actions. For example, rapidly creating content, polling aggressively instead of using webhooks, making API calls with a high concurrency, or repeatedly requesting data that is computationally expensive may result in abuse rate limiting.</p>
 
