--- a/app/views/docs/rules.phtml
+++ b/app/views/docs/rules.phtml
@@ -5,7 +5,7 @@ $markdown->setSafeMode(true);
 
 <p>Rules are the building blocks of Appwrite Database collections. Using rules and their validators you are able to structure your project data and make sure you only get the data in the formats you expect to.</p>
 
-<h2><a href="#ruleOjbect" id="ruleObject">Rule Object</a></h2>
+<h2><a href="/docs/rules#ruleOjbect" id="ruleObject">Rule Object</a></h2>
 
 <?php
     $parameters = [
@@ -146,7 +146,7 @@ $markdown->setSafeMode(true);
 </table>
 
 
-<h2 id="examples"><a href="#examples">Examples</a></h2>
+<h2 id="examples"><a href="/docs/rules#examples">Examples</a></h2>
 
 <p>The examples below will show you how you can use the rule objects to define a new Appwrite collection.</p>
 
