--- a/app/views/docs/custom-domains.phtml
+++ b/app/views/docs/custom-domains.phtml
@@ -321,11 +321,11 @@ $dns = [
 
 <p>For example, if your app runs on <span class="link">my-app.com</span>, you can set the subdomain <span class="link">appwrite.my-app.com</span> to access the Appwrite API. This will allow browsers to respect the Appwrite sessions cookies as they are set on the same domain as your app.</p>
 
-<h2><a href="#addYourDomain" id="addYourDomain">Add Your Domain</a></h2>
+<h2><a href="/docs/custom-domains#addYourDomain" id="addYourDomain">Add Your Domain</a></h2>
 
 <p>You can set your domain name by adding it to your Appwrite project settings page under the 'Custom Domains' tab. After you added your new domain to your project settings from the dashboard, you will need to create a new CNAME DNS record at your DNS provider dashboard.</p>
 
-<h2><a href="#addCNAME" id="addCNAME">Add a CNAME Record</a></h2>
+<h2><a href="/docs/custom-domains#addCNAME" id="addCNAME">Add a CNAME Record</a></h2>
 
 <p>A <a href="https://en.wikipedia.org/wiki/CNAME_record" target="_blank" rel="noopener">CNAME record</a> (or a Canonical Name record) is a type of resource record in the Domain Name System (DNS), which maps one domain name (an alias) to another.</p>
 
@@ -354,15 +354,15 @@ $dns = [
     </tbody>
 </table>
 
-<h2><a href="#verifyDomain" id="verifyDomain">Confirm and Verify Your Domain</a></h2>
+<h2><a href="/docs/custom-domains#verifyDomain" id="verifyDomain">Confirm and Verify Your Domain</a></h2>
 
 <p>Once you added your new CNAME record to your DNS settings, you will need to verify your new domain name from your Appwrite console. Enter your custom domains tab from your project settings, click the DNS Settings link and click on the 'Confirm and Verify" button. If everything went well, Appwrite will approve your domain and generate a new SSL certificate for it in the background.</p>
 
-<h2><a href="#enjoySSLCert" id="enjoySSLCert">Enjoy your Free SSL Certificate</a></h2>
+<h2><a href="/docs/custom-domains#enjoySSLCert" id="enjoySSLCert">Enjoy your Free SSL Certificate</a></h2>
 
 <p>Appwrite uses <a href="https://letsencrypt.org/" target="_blank" rel="noopener">Letsencrypt</a> service to generate free and automated SSL certificates for your custom domains. Once your domain is verified, it will take the Appwrite server a few seconds to create a new SSL certificate for it. Once done, you will see your domain TLS setting marked as 'Enabled' in your Appwrite dashboard, and you will be able to connect the Appwrite API using your new domain.</p>
 
-<h2><a href="#connectCustomDomain" id="connectCustomDomain">Connect using Your Custom Domain</a></h2>
+<h2><a href="/docs/custom-domains#connectCustomDomain" id="connectCustomDomain">Connect using Your Custom Domain</a></h2>
 
 <p>To connect with your Appwrite server using your new domain, you will have to use the 'setEndpoint' (or 'set_endpoint') method in your SDK of choice and pass your new domain value, for example:</p>
 
