--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -17,11 +17,11 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 
 <p>This tutorial will help you start using Appwrite products and build your next project. Before starting, make sure you have followed the Appwrite <a href="/docs/installation">installation guide</a>, and you have an Appwrite server instance up and running on your host machine or server.</p>
 
-<h2><a href="#createYourProject" id="createYourProject">Create Your First Appwrite Project</a></h2>
+<h2><a href="/docs/getting-started-for-flutter#createYourProject" id="createYourProject">Create Your First Appwrite Project</a></h2>
 
 <p>Go to your new Appwrite console, and once inside, click the <i class="icon-plus"></i> icon in the top navigation header or on the <b>'Create Project'</b> button on your console homepage. Choose a name for your project and click create to get started.</p>
 
-<h2><a href="#addYourPlatform" id="addYourPlatform">Add your Flutter Platform</a></h2>
+<h2><a href="/docs/getting-started-for-flutter#addYourPlatform" id="addYourPlatform">Add your Flutter Platform</a></h2>
 
 <p>To init your SDK and start interacting with Appwrite services, you need to add a new Flutter platform to your project. To add a new platform, go to your Appwrite console, choose the project you created in the step before, and click the 'Add Platform' button.</p>
 
@@ -88,7 +88,7 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 <p>For <b>Windows</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your href="https://github.com/appwrite/playground-for-flutter/blob/0fdbdff98384fff940ed0b1e08cf14cfe3a2be3e/pubspec.yaml#L1" target="_blank" rel="noopener">pubspec.yaml</a> file. If you cannot find the correct package name, run the application in windows, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
 
 
-<h2><a href="#getSDK" id="getSDK">Get Appwrite Flutter SDK</a></h2>
+<h2><a href="/docs/getting-started-for-flutter#getSDK" id="getSDK">Get Appwrite Flutter SDK</a></h2>
 
 <p>Add <a href="https://pub.dev/packages/appwrite" target="_blank" rel="noopener">Appwrite SDK</a> to your package's pubspec.yaml file <a href="https://github.com/appwrite/playground-for-flutter/blob/master/pubspec.yaml" target="_blank" rel="noopener">(view example)</a>:</p>
 
@@ -104,7 +104,7 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
   <pre class="line-numbers"><code class="prism language-bash" data-prism>pub get appwrite</code></pre>
 </div>
 
-<h2><a href="#initSDK" id="initSDK">Init your SDK</a></h2>
+<h2><a href="/docs/getting-started-for-flutter#initSDK" id="initSDK">Init your SDK</a></h2>
 
 <p>Initialize your SDK code with your project ID, which can be found in your project settings page.</p>
 
@@ -125,7 +125,7 @@ client
 
 <p>When trying to connect to Appwrite from an emulator or a mobile device, localhost is the hostname for the device or emulator and not your local Appwrite instance. You should replace localhost with your private IP as the Appwrite endpoint's hostname. You can also use a service like <a href="https://ngrok.com/" target="_blank" rel="noopener">ngrok</a> to proxy the Appwrite API.</p>
 
-<h2><a href="#makeRequest" id="makeRequest">Make Your First Request</a></h2>
+<h2><a href="/docs/getting-started-for-flutter#makeRequest" id="makeRequest">Make Your First Request</a></h2>
 
 <p>Once your SDK object is set, access any of the Appwrite services and choose any request to send. Full documentation for any service method you would like to use can be found in your SDK documentation or in the API References section.</p>
 
@@ -142,7 +142,7 @@ Response user = await account
 </code></pre>
 </div>
 
-<h2><a href="#fullExample" id="fullExample">Full Example</a></h2>
+<h2><a href="/docs/getting-started-for-flutter#fullExample" id="fullExample">Full Example</a></h2>
 <div class="ide" data-lang="dart" data-lang-label="Flutter SDK">
   <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:appwrite/appwrite.dart';
 
@@ -166,6 +166,6 @@ Response user = await account
 </code></pre>
 </div>
 
-<h2><a href="#nextSteps" id="nextSteps">Next Steps</a></h2>
+<h2><a href="/docs/getting-started-for-flutter#nextSteps" id="nextSteps">Next Steps</a></h2>
 
 <p>Appwrite has many services and tools to help improve your app and speed up your development. The best way to learn how you can take advantage of them is to explore the different API references docs.</p>
