--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -19,11 +19,11 @@ $demos = $platform['demos'] ?? [];
 
 <p>This tutorial will help you start using Appwrite products and build your next project. Before starting, make sure you have followed the Appwrite <a href="/docs/installation">installation guide</a>, and you have an Appwrite server instance up and running on your host machine or server.</p>
 
-<h2><a href="#createProject" id="createProject">Create Your First Appwrite Project</a></h2>
+<h2><a href="/docs/getting-started-for-web#createProject" id="createProject">Create Your First Appwrite Project</a></h2>
 
 <p>Go to your new Appwrite console and once inside click the <i class="icon-plus"></i> icon in the top navigation header or on the <b>'Create Project'</b> button on your console homepage. Choose a name for your project and click create to get started.</p>
 
-<h2><a href="#addPlatform" id="addPlatform">Add Your Web Platform</a></h2>
+<h2><a href="/docs/getting-started-for-web#addPlatform" id="addPlatform">Add Your Web Platform</a></h2>
 
 <p>For you to init your SDK and interact with Appwrite services you need to add a web platform to your project. To add a new platform, go to your Appwrite console, choose the project you created in the step before and click the 'Add Platform' button.</p>
 
@@ -31,7 +31,7 @@ $demos = $platform['demos'] ?? [];
 
 <?php //TODO add console ui image here ?>
 
-<h2><a href="#getSDK" id="getSDK">Get Appwrite Web SDK</a></h2>
+<h2><a href="/docs/getting-started-for-web#getSDK" id="getSDK">Get Appwrite Web SDK</a></h2>
 
 <h3>NPM</h3>
 
@@ -55,7 +55,7 @@ $demos = $platform['demos'] ?? [];
     <pre class="line-numbers"><code class="prism language-markup" data-prism><?php echo htmlentities('<script src="https://cdn.jsdelivr.net/npm/appwrite@'.$this->escape($version).'"></script>'); ?></code></pre>
 </div>
 
-<h2><a href="#initSDK" id="initSDK">Init your SDK</a></h2>
+<h2><a href="/docs/getting-started-for-web#initSDK" id="initSDK">Init your SDK</a></h2>
 
 <p>Initialize your SDK code with your project ID which can be found in your project settings page.</p>
 
@@ -77,7 +77,7 @@ appwrite
     <p>Never pass an API Key when initializing a client SDK. This action will expose your users to any data your API Key has been granted access to, even if your users do not own it! API keys should be used from server-side integrations only!</p>
 </div> -->
 
-<h2><a href="#makeRequest" id="makeRequest">Make Your First Request</a></h2>
+<h2><a href="/docs/getting-started-for-web#makeRequest" id="makeRequest">Make Your First Request</a></h2>
 
 <p>Once your SDK object is set, access any of the Appwrite services and choose any request to send. Full documentation for any service method you would like to use can be found in your SDK documentation or in the API References section.</p>
 
@@ -93,7 +93,7 @@ appwrite
 </code></pre>
 </div>
 
-<h2><a href="#fullExample" id="fullExample">Full Example</a></h2>
+<h2><a href="/docs/getting-started-for-web#fullExample" id="fullExample">Full Example</a></h2>
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
                     <pre class="line-numbers"><code class="prism language-javascript" data-prism>// Init your Web SDK
 const appwrite = new Appwrite();
@@ -112,7 +112,7 @@ appwrite
 </code></pre>
 </div>
 
-<h2><a href="#demos" id="demos">Demos</a></h2>
+<h2><a href="/docs/getting-started-for-web#demos" id="demos">Demos</a></h2>
 
 <p>Below you can find a list of some demos to help you get started with Appwrite for Web using your favorite tools and framework of choice.</p>
 
@@ -153,6 +153,6 @@ appwrite
         </tbody>
     </table>
 
-<h2><a href="#nextSteps" id="nextSteps">Next Steps</a></h2>
+<h2><a href="/docs/getting-started-for-web#nextSteps" id="nextSteps">Next Steps</a></h2>
 
 <p>Appwrite has many services and tools to help improve your app and speed up your development. The best way to learn how you can take advantage of them is to explore the different API references docs.</p>
