Add more anchor links

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -19,7 +19,7 @@ $runtimes = $this->getParam('runtimes', []);
 
 <p>You can deploy your code using the <a href="/docs/command-line">Appwrite CLI</a> tool, the Appwrite <a href="/docs/getting-started-for-server">Server API</a> or manually from the Appwrite console.</p>
 
-<h3>Create Tag</h3>
+<h3><a href="/docs/functions#createTag" id="createTag">Create Tag</a></h3>
 
 <ul class="phases clear" data-ui-phases>
     <li>
@@ -186,7 +186,7 @@ void main() { // Init SDK
 </ul>
 
 
-<h3>Abuse and Limits</h3>
+<h3><a href="/docs/functions#abuseLimits" id="abuseLimits">Abuse and Limits</a></h3>
 
 <p>Appwrite allows your project's end-users to execute Cloud Functions using client API or your client SDK. Execution is permitted to any user who has been granted the "execute" permission in your Cloud Functions settings page. The execution permission can accept any of the typical Appwrite <a href="/docs/permissions">permission types</a>.</p>
 
@@ -347,7 +347,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
         ->render();
 ?>
 
-<h3>Run Offline</h3>
+<h3><a href="/docs/functions#runOffline" id="runOffline">Run Offline</a></h3>
 
 <p>You can quickly run your Cloud Function locally by executing the Appwrite runtime locally using its corresponding Docker image. You can pass your offline container any environment variables your script needs and your entry command like in the example below.</p>
 
