--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -29,7 +29,7 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 
 <p>If you are building your Flutter application for multiple devices, you have to follow this process for each different device.</p>
 
-<h3>Android</h3>
+<h3><a href="/docs/getting-started-for-flutter#android" id="android">Android</a></h3>
 
 <p>For <b>Android</b> first add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>applicationId</b> in your app-level <a href="https://github.com/appwrite/playground-for-flutter/blob/0fdbdff98384fff940ed0b1e08cf14cfe3a2be3e/android/app/build.gradle#L41" target="_blank" rel="noopener">build.gradle</a> file. By registering your new app platform, you are allowing your app to communicate with the Appwrite API.</p>
 
@@ -52,7 +52,7 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 </code></pre>
 </div>
 
-<h3>iOS</h3>
+<h3><a href="/docs/getting-started-for-flutter#iOS" id="iOS">iOS</a></h3>
 
 <p>For <b>iOS</b> first add your app <u>name</u> and <u>Bundle ID</u>, You can find your Bundle Identifier in the General tab for your app's primary target in Xcode.</p>
 
@@ -65,15 +65,15 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
   <li class="margin-bottom-small">In Deployment Info, 'Target' select iOS 11.0</li>
 </ol>
 
-<h3>Linux</h3>
+<h3><a href="/docs/getting-started-for-flutter#linux" id="linux">Linux</a></h3>
 
 <p>For <b?>Linux</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your <a href="https://github.com/appwrite/playground-for-flutter/blob/0fdbdff98384fff940ed0b1e08cf14cfe3a2be3e/pubspec.yaml#L1" target="_blank" rel="noopener">pubspec.yaml</a> file. If you cannot find the correct package name, run the application in linux, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
 
-<h3>Mac OS</h3>
+<h3><a href="/docs/getting-started-for-flutter#macOS" id="macOS">Mac OS</a></h3>
 
 <p>For <b>Mac OS</b> add your app name and Bundle ID, You can find your Bundle Identifier in the General tab for your app's primary target in Xcode.</p>
 
-<h3>Web</h3>
+<h3><a href="/docs/getting-started-for-flutter#web" id="web">Web</a></h3>
 
 <p>Appwrite 0.7, and the Appwrite Flutter SDK 0.3.0 have added support for Flutter Web. To build web apps that integrate with Appwrite successfully, all you have to do is add a web platform on your Appwrite project's dashboard and list the domain your website will use to allow communication to the Appwrite API.</p>
 
@@ -83,7 +83,7 @@ $version = (isset($versions['flutter'])) ? $versions['flutter'] : '';
 </div>
 
 
-<h3>Windows</h3>
+<h3><a href="/docs/getting-started-for-flutter#windows" id="windows">Windows</a></h3>
 
 <p>For <b>Windows</b> add your app <u>name</u> and <u>package name</u>, Your package name is generally the <b>name</b> in your <a href="https://github.com/appwrite/playground-for-flutter/blob/0fdbdff98384fff940ed0b1e08cf14cfe3a2be3e/pubspec.yaml#L1" target="_blank" rel="noopener">pubspec.yaml</a> file. If you cannot find the correct package name, run the application in windows, and make any request with proper exception handling, you should get the application id needed to add in the received error message.</p>
 
