--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -33,7 +33,7 @@ $demos = $platform['demos'] ?? [];
 
 <h2><a href="/docs/getting-started-for-web#getSDK" id="getSDK">Get Appwrite Web SDK</a></h2>
 
-<h3>NPM</h3>
+<h3><a href="/docs/getting-started-for-web#npm" id="npm">NPM</a></h3>
 
 <p>Use <a href="https://npmjs.com" target="_blank">NPM (node package manager)</a> from your command line to add Appwrite SDK to your project.</p>
 
@@ -47,7 +47,7 @@ $demos = $platform['demos'] ?? [];
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Appwrite } from "appwrite";</code></pre>
 </div>
 
-<h3>CDN</h3>
+<h3><a href="/docs/getting-started-for-web#cdn" id="cdn">CDN</a></h3>
 
 <p>To install with a CDN (content delivery network) add the following scripts to the bottom of your tag, but before you use any Appwrite services:</p>
 
