--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -13,7 +13,7 @@
 
 <p>The easiest way to start running your Appwrite server is by running our Docker installer tool from your terminal. Before running the installation command, make sure you have <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a> installed on your host machine.</p>
 
-<h3>Unix</h3>
+<h3><a href="/docs/installation#unix" id="unix">Unix</a></h3>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>docker run -it --rm \
@@ -23,7 +23,7 @@
     appwrite/appwrite:<?php echo APP_VERSION_STABLE; ?></code></pre>
 </div>
 
-<h3>Windows</h3>
+<h3><a href="/docs/installation#windows" id="windows">Windows</a></h3>
 
 <p>Hyper-V and Containers Windows features must be enabled to run Appwrite on Windows with Docker. If you don't have these features available, you can install <a href="https://docs.docker.com/toolbox/toolbox_install_windows/" target="_blank" rel="noopener">Docker Toolbox</a> that uses Virtualbox to run Appwrite on a Virtual Machine.</p>
 
@@ -53,7 +53,7 @@
     </li>
 </ul>
 
-<h3>Manual (using docker-compose.yml)</h3>
+<h3><a href="/docs/installation#manual" id="manual">Manual (using docker-compose.yml)</a></h3>
 
 <p>For advanced Docker users, the manual installation might seem more familiar. To setup Appwrite manually, download the Appwrite base <a href="https://gist.github.com/eldadfux/977869ff6bdd7312adfd4e629ee15cc5" target="_blank">docker-compose.yml and .env</a> files. After the download completes, update the different environment variables as you wish in the .env file and start the Appwrite stack using the following Docker command:</p>
 
