--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -97,7 +97,7 @@
 
 <p>The following examples are using the <a href="https://github.com/appwrite/sdk-for-js" target="_blank" rel="noopener">Appwrite Web SDK</a> but can be applied similarly to any of the other <a href="/docs/sdks">Appwrite SDKs</a>.</p>
 
-<h3 id="example-1">Example #1 - Basic Usage</h3>
+<h3 id="example-1"><a href="/docs/permissions#example-1">Example #1 - Basic Usage</a></h3>
 
 <p>In the following example, we are creating a document that can be read by everyone and only be edited, or deleted by a user with a UID <span class="tag">user:5c1f88b42259e</span>.</p>
 
@@ -124,7 +124,7 @@ promise.then(function (response) {
 </code></pre>
 </div>
 
-<h3 id="example-2">Example #2 - Team Roles</h3>
+<h3 id="example-2"><a href="/docs/permissions#example-2">Example #2 - Team Roles</a></h3>
 
 <p>In the following example, we are creating a document that can be read-only by members of <span class="tag">team:5c1f88b87435e</span> and can only be edited, or deleted by members of the same team that possesses the role <span class="tag">owner</span>.</p>
 
