Added missing code

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -68,6 +68,12 @@
         </tr>
 
         <tr>
+            <td data-title="Code: ">501</td>
+            <td data-title="Text: ">Not Implemented</td>
+            <td data-title="Description: ">The feature is not implemented. Usually returned when the project owner has disabled an auth method or an entire service.</td>
+        </tr>
+
+        <tr>
             <td data-title="Code: ">503</td>
             <td data-title="Text: ">Service Unavailable</td>
             <td data-title="Description: ">The Appwrite servers are up but overloaded with requests. Try again later.</td>
