open install link in new page

--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -55,7 +55,7 @@
 
 <p>With DigitalOcean marketplace one click installation of Appwrtie, it is now easier than ever to deploy Appwrite to production. With DigitalOcean droplets, it is also very cost effective to setup and run Appwrite in production. You can use the button below to directly create a Appwrite droplet in your DigitalOcean account, once you have the DigitalOcean account.</p>
 
-<p><a href="https://cloud.digitalocean.com/droplets/new?onboarding_origin=marketplace&image=appwrite-20-04">Deploy to Digitalocean</a></p>
+<p><a href="https://cloud.digitalocean.com/droplets/new?onboarding_origin=marketplace&image=appwrite-20-04" target="_blank">Deploy to Digitalocean</a></p>
 
 <h3><a href="/docs/installation#manual" id="manual">Manual (using docker-compose.yml)</a></h3>
 
