Add references to Open API 3 + Swagger2 specifications to main docs page

--- a/app/views/docs/main.phtml
+++ b/app/views/docs/main.phtml
@@ -86,7 +86,9 @@ $clients = [
     <div class="margin-bottom-large">
         <h2 class="margin-bottom">API References</h2>
         
-        <p>The Appwrite API is organized around REST. Our API has predictable resource-oriented URLs, accepts form-encoded or JSON-encoded request bodies, returns JSON-encoded responses, and uses standard HTTP response codes, authentication, and verbs.</p>        
+        <p>The Appwrite API is organized around REST. Our API has predictable resource-oriented URLs, accepts form-encoded or JSON-encoded request bodies, returns JSON-encoded responses, and uses standard HTTP response codes, authentication, and verbs.</p>
+
+        <p>Specifications for the Appwrite API are available in multiple formats, including Open API 3 for <a href="https://appwrite.io/specs/open-api3?platform=client">clients</a> or <a href="https://appwrite.io/specs/open-api3?platform=server">servers</a> and Swagger2 for <a href="https://appwrite.io/specs/swagger2?platform=client">clients</a> or <a href="https://appwrite.io/specs/swagger2?platform=server">servers</a>.</p>
     </div>
 
     <div class="margin-bottom-large">
