Added a missing comma

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -253,7 +253,7 @@ void main() { // Init SDK
             <td>
                 APPWRITE_FUNCTION_TRIGGER
             </td>
-            <td>Either 'event' when triggered by one of the selected scopes, 'http' when triggered by an http request or the dashboard or 'schedule' when triggered by the cron schedule.</td>
+            <td>Either 'event' when triggered by one of the selected scopes, 'http' when triggered by an http request or the dashboard, or 'schedule' when triggered by the cron schedule.</td>
         </tr>
         <tr>
             <td>
