Fixed spelling mistakes

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -46,7 +46,7 @@
         <tr>
             <td data-title="Code: ">404</td>
             <td data-title="Text: ">Not Found</td>
-            <td data-title="Description: ">The URI requested is invalid or the resource requested, such as a user, does not exists.</td>
+            <td data-title="Description: ">The URI requested is invalid or the resource requested, such as a user, does not exist.</td>
         </tr>
 
         <tr>
