--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -2,7 +2,7 @@
 
 <p>Using permissions, you can decide that only <span class="tag">user A</span> and <span class="tag">user B</span> will have read access to a specific database document, while <span class="tag">user C</span> and <span class="tag">team X</span> will be the only ones with write access.</p>
 
-<p>As the name suggests, read permission will give allow users and teams to have access to view a resource while with write permission, they will be able to both update or delete it.</p>
+<p>As the name suggests, read permission will allow users and teams to view a resource while with write permission, they will be able to both update or delete it.</p>
 
 <p>Read and write permissions can be given to specific users, entire teams, or only to a particular group of role members inside a team.</p>
 
@@ -23,7 +23,7 @@
 <div class="notice calm margin-top-large margin-bottom-large">
     <h4>Note</h4>
     
-    <p>You will need an active session to handle database transactions for your collections</p>
+    <p>You will need an active session to handle database transactions for your collections.</p>
     <p>If you have rules where you allow for wild cards or role:guest in a collection, you can create an Anonymous Session before you make the API call.</p>
 </div>
 
