--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -16,7 +16,7 @@ $channels = [
 
 <p>Realtime allows you to listen to any events on the server-side in realtime using the <b>subscribe</b> method.</p>
 <p>Instead of requesting new data via HTTP, the subscription will receive new data everytime it changes, any connected client receives that update within milliseconds via a WebSocket connection.</p>
-<p>This lets you build an interactive and responsive user experience by providing informations from all of Appwrite's services in realtime.</p>
+<p>This lets you build an interactive and responsive user experience by providing information from all of Appwrite's services in realtime.</p>
 <ul class="phases clear" data-ui-phases>
     <li>
         <h3>Web</h3>
